examples/errors/parsing/sum_types-double-bar.cn
type Option(a) = { Some : a | | None : () }

main : () [impure] = ()
